Add HTTP Todo client and GraphQL integration